[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dash-dq"
version = "0.1.16"
description = "Data quality checks for Databricks — with a built-in notebook UI"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "Darshan Shah", email = "darshan.innovation@gmail.com" }]
keywords = ["databricks", "data-quality", "pyspark", "delta"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
]
dependencies = []

[project.optional-dependencies]
ui  = ["ipywidgets>=7.6"]
dev = ["pytest", "pytest-cov", "hatch", "pdoc", "ruff", "pandas", "ipywidgets>=7.6"]

[project.urls]
Homepage = "https://github.com/dash-libs/dash-dq"
Documentation = "https://github.com/dash-libs/dash-dq#readme"
Source = "https://github.com/dash-libs/dash-dq"

[tool.hatch.build.targets.wheel]
packages = ["dashdq"]

[tool.pytest.ini_options]
testpaths = ["tests"]
